[b] - Fix overflow error

--- a/static/css/packages/show.css
+++ b/static/css/packages/show.css
@@ -395,10 +395,19 @@
   border-radius: 4px;
   margin: 0;
   padding: 5px 8px;
-  display: block;
+  display: inline-block;
   border: none;
   white-space: pre;
-  overflow: scroll;
+}
+@media screen and (min-width: 258px) and (max-width: 455px) {
+  .package-show-container .package-content-container .package-detail-container .package-readme-content code {
+    overflow-x: scroll;
+  }
+}
+@media screen and (min-width: 240px) and (max-width: 257px) {
+  .package-show-container .package-content-container .package-detail-container .package-readme-content code {
+    overflow-x: scroll;
+  }
 }
 .package-show-container .package-content-container .package-detail-container .package-readme-content pre {
   background-color: var(--gray-background-color);
